# Robotic-Car

./: .gitignore  CMakeLists.txt  README.md  main.c  pins.h  ultrasonic.h  wheels.h
barcode/: CMakeLists.txt  barcode_scanner.c  barcode_scanner.h
magnetometer/: wifi_magnetometer.c  wifi_magnetometer.uf2
main/: CMakeLists.txt  main.c  station2.c
motor/: CMakeLists.txt  motor.c  motor.h
source/: CMakeLists.txt  barcode.c  barcode.h  encoder.c  encoder.h  hardware_init.c  hardware_init.h  header.h  line.c  line.h  motor.c  motor.h  pins.h  print.c  server.c  server.h  task_handles.h  transition.c  transition.h  ultrasonic.c  ultrasonic.h
temp/: encoder.h  motor.h  wheels.h
wifi/: CMakeLists.txt  proj_server.uf2  server.c
